* 2016-03-29 5.4
  add CISCO-STACKWISE-MIB
* 2016-03-11 5.3.3
  Use 64bit-counters from cisco-enhanced-mempool-mib if available (cisco bug CSCuu46705)
  Merge pull request #61 from Napsty/checkpoint-mgmt
  Merge pull request #67 from Napsty/list-detail-alias
  Simplify interface code
* 2016-02-29 5.3.2
  Merge pull request #64 Claudio Kuenzler
* 2016-02-25 5.3.1
  bugfix in --ifspeed
* 2016-02-16 5.3
  add mode chassis-hardware-health (for cisco)
* 2016-02-16 5.2.2
  update checkpoint, use new mib
  fallback if no cisco cpu index can be found
* 2016-02-15 5.2.1
  refactor interface-usage, bugfix in list-interfaces
  bugfix in link-aggregation-availability thresholds
* 2016-02-09 5.2
  fix cisco bgp prefix count if no peers were found
  small fix in interfaces, add flat_indices
  bugfix in entity-sensor-mib
  add glplugin submodule (Thanks k0ste)
  pr #52 cisco-alarm-mib parse octets (Thanks dhoffend)
* 2015-12-20 5.1
  Fix IOS-XE which no longer support the ENVMON MIB. Use FRU MIB instead. (Zhanks Daniel Hoffend, pull request #49)
* 2015-11-24 5.0
  introduce new units (based on 1000 instead of 1024), will have an impact on interface perfdata thresholds
* 2015-11-24 4.8
  add Huawei CloudEngine
  pull request #45 chomp Checkpoint HA state (Thanks Claudio Kuenzler)
  pull request #46  Add CheckPoint Power Supply Check (Thanks Claudio Kuenzler)
* 2015-11-18 4.7.1
  detect CheckPoint IPSO (Thanks Claudio Kuenzler)
* 2015-11-05 4.7
  fix standalone version
* 2015-10-22 4.6.1
  add --mode interface-health to linux, solaris, windows
  find more bluecoat models
* 2015-10-02 4.6
  add --mode interface-health
* 2015-09-29 4.5
  merge huawei h3c from lazyfrosch-hh3c-switches
  output ifAlias in interface-modes (if it exists and != ifDescr)
* 2015-09-06 4.4
  add rapid-city-mib
  add entity-mib for cisco asa
* 2015-08-18 4.3.1
  add ha-role for Aruba
* 2015-08-17 4.3
  add Alcatel OmniAccess (Aruba)
* 2015-08-17 4.2.1
  GLPlugin update
* 2015-07-31 4.2